vlib/v/checker/tests/bit_op_wrong_right_type_err.vv
fn main() {
	println(1 | 0.5)
}
